--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,14 @@
 cmake-build-release/*
 cmake-build-debug/*
 
+/cmake-build-release/
+/cmake-build-release/.cmake/
+/cmake-build-release/CMakeFiles/
+/cmake-build-release/Testing/
+/cmake-build-release/.ninja_deps
+/cmake-build-release/.ninja_log
+/cmake-build-release/build.ninja
+/cmake-build-release/cmake_install.cmake
+/cmake-build-release/CMakeCache.txt
+/cmake-build-release/sim.csv
+/cmake-build-release/simplified_four_wheel_model
