--- a/.gitignore
+++ b/.gitignore
@@ -2,17 +2,5 @@
 .idea/vcs.xml
 *.log
 
-cmake-build-release/*
-cmake-build-debug/*
-
-/cmake-build-release/
-/cmake-build-release/.cmake/
-/cmake-build-release/CMakeFiles/
-/cmake-build-release/Testing/
-/cmake-build-release/.ninja_deps
-/cmake-build-release/.ninja_log
-/cmake-build-release/build.ninja
-/cmake-build-release/cmake_install.cmake
-/cmake-build-release/CMakeCache.txt
-/cmake-build-release/sim.csv
-/cmake-build-release/simplified_four_wheel_model
+/cmake-build-release/*
+/cmake-build-debug/*
